# S.T.R.I.D.E

./: .gitignore  Dockerfile  Flaws_and_Solutions.md  STRIDE_YellowDuck.pptx  docker-compose.yml  implementationv2.md  ps.md  start.sh  userguide.md  work.md
backend/: requirements.txt
corrosion_webapp/: app.py
corrosion_webapp/static/: styles.css
corrosion_webapp/templates/: index.html
dashboard/: package-lock.json
dashboard/src/app/: globals.css  page.tsx
workspace/: test_state.py
workspace/backend/: main.py
workspace/src/drone_control_pkg/: package.xml  setup.cfg  setup.py
workspace/src/drone_control_pkg/drone_control_pkg/: kinematics_node.py  navigation_node.py
workspace/src/drone_control_pkg/launch/: navigation.launch.py
workspace/src/drone_simulation/: CMakeLists.txt  package.xml
workspace/src/drone_simulation/launch/: simulation.launch.py
workspace/src/drone_simulation/models/simple_drone/: model.config  model.sdf
workspace/src/drone_simulation/worlds/: inspection.world
workspace/src/vision_pkg/: package.xml  setup.py
workspace/src/vision_pkg/launch/: vision.launch.py
workspace/src/vision_pkg/scripts/: test_corrosion_opencv.py
workspace/src/vision_pkg/vision_pkg/: defect_detection_node.py
